# Mathh

./: BUILD_NOW.md  BUILD_WINDOWS.md  CMakeLists.txt  COMPILATION_FIXED.md  CUSTOM_INPUT.md  EXAMPLES.md  EXPORT_DEBUGGING.md  FEATURES_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LATEX_EXPORT_FEATURE.md  LIMIT_CONFIG_FEATURE.md  MANUAL_COMPILE.md  NEW_FEATURES.md  OPENGL_RENDERING.md  QUICK_LATEX_GUIDE.md  QUICK_LIMITS_GUIDE.md  QUICK_START_NEW_FEATURES.md  README.md  UPDATES_SUMMARY.md  build_script.sh  compile.bat  compile_manual.sh
src/: main.cpp
src/engine/: ast.h  differentiator.cpp  differentiator.h  integrator.cpp  integrator.h  latex_exporter.cpp  latex_exporter.h  limit_calculator.cpp  limit_calculator.h  matrix_operations.cpp  matrix_operations.h  numerical_methods.cpp  parser.cpp  parser.h  polynomial_operations.cpp  polynomial_operations.h  simplifier.cpp  simplifier.h
src/ui/: plotter.cpp  plotter.h  renderer.cpp  renderer.h  text_renderer.cpp  text_renderer.h
